--- a/landing/templates/landing/index.html
+++ b/landing/templates/landing/index.html
@@ -3,40 +3,41 @@
 <nav id="mainNav" class="navbar static-top navbar-toggleable-md navbar-inverse bg-inverse">
 
     <a class="navbar-brand" href="{% url 'index' %}" style="margin-right:100px">Project & Budget Monitoring System</a>
-    <div class="collapse navbar-collapse">
-        <ul class="sidebar-nav navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="{% url 'index' %}"><i class="fa fa-home"></i> Home</a>
-            </li>
-            <li class="nav-item ">
-                <a class="nav-link nav-link-collapse collapsed table" data-toggle="collapse" href="#collapseMulti"><i class="fa fa-balance-scale"></i> Budget</a>
-                <ul class="sidebar-second-level collapse" id="collapseMulti">
-                    <li>
-                        <a class="nav-link-collapse collapsed" data-toggle="collapse" href="#collapseMulti2">2017/2018</a>
-                        <ul class="sidebar-third-level collapse" id="collapseMulti2">
-                            <li><a href="{% url 'budgets' %}">Year overview</a></li>
-                            <li><a href="{% url 'first' %}">First Quarter</a></li>
-                            <li><a href="{% url 'second' %}">Second Quarter</a></li>
-                            <li><a href="{% url 'third' %}">Third Quarter</a></li>
-                            <li><a href="{% url 'fourth' %}">Fourth Quarter</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'projects' %}"><i class="fa fa-tasks"></i> Projects</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'compare' %}"><i class="fa fa-pie-chart" aria-hidden="true"></i> Comparative Analytics </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'predict' %}"><i class="fa fa-space-shuttle" aria-hidden="true"></i> Predictive Analytics </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'export' %}"><i class="fa fa-download" aria-hidden="true"></i> View and Export </a>
-            </li>
-        </ul>
-    </div>
+    <a class="MenuSizer" href="#"><i class="fa fa-bars" aria-hidden="true"></i></a>
+        <div class="collapse navbar-collapse">
+            <ul class="sidebar-nav navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'index' %}"><i class="fa fa-home"></i> Home</a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link nav-link-collapse collapsed table" data-toggle="collapse" href="#collapseMulti"><i class="fa fa-balance-scale"></i> Budget</a>
+                    <ul class="sidebar-second-level collapse" id="collapseMulti">
+                        <li>
+                            <a class="nav-link-collapse collapsed" data-toggle="collapse" href="#collapseMulti2">2017/2018</a>
+                            <ul class="sidebar-third-level collapse" id="collapseMulti2">
+                                <li><a href="{% url 'budgets' %}">Year overview</a></li>
+                                <li><a href="{% url 'first' %}">First Quarter</a></li>
+                                <li><a href="{% url 'second' %}">Second Quarter</a></li>
+                                <li><a href="{% url 'third' %}">Third Quarter</a></li>
+                                <li><a href="{% url 'fourth' %}">Fourth Quarter</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'projects' %}"><i class="fa fa-tasks"></i> Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'compare' %}"><i class="fa fa-pie-chart" aria-hidden="true"></i> Comparative Analytics </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'predict' %}"><i class="fa fa-space-shuttle" aria-hidden="true"></i> Predictive Analytics </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'export' %}"><i class="fa fa-download" aria-hidden="true"></i> View and Export </a>
+                </li>
+            </ul>
+        </div>
 
 </nav>
 
